[package]
name = "actix-with-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.12.0"
actix-redis = "0.11.0"
actix-web = "4.0.1"
tokio = { version = "1.17.0", features = ["macros", "rt-multi-thread"] }
