[package]
name = "test-actix-with-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
redis = { version = "0.21.4", features = ["tokio-comp"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros"] }

[features]
